--- a/index.html
+++ b/index.html
@@ -14,21 +14,38 @@
 </head>
 <body>
   
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
-
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
-
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
-  
+  <div class="card">
+    <div class="type">
+      <img src="images/icon-sedans.svg" alt="" class="icon">
+      <h2>Sedans</h2>
+      <p>
+        Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+        or on your next road trip.
+      </p>
+      <button>Learn More</button>
+    </div>
+    <div class="type">
+      <img src="images/icon-suvs.svg" alt="" class="icon">
+      <h2>SUVs</h2>
+      <p>
+        Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+        and off-road adventures.
+      </p>
+      <button>Learn More</button>
+    </div>
+    <div class="type">
+      <img src="images/icon-luxury.svg" alt="" class="icon">
+      <h2>luxury</h2>
+      <p>
+        Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+        rental and arrive in style.
+      </p>
+      <button>Learn More</button>
+    </div>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.github.com/sajadzirak">Your Name Here</a>.
   </div>
 </body>
 </html>
