styling completed :) it's almost there

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
         or on your next road trip.
       </p>
-      <button>Learn More</button>
+      <button id="suvs-button">Learn More</button>
     </div>
     <div class="type">
       <img src="images/icon-suvs.svg" alt="" class="icon">
@@ -45,7 +45,7 @@
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.github.com/sajadzirak">Your Name Here</a>.
+    Coded by <a href="https://www.github.com/sajadzirak">Sajad zirak</a>.
   </div>
 </body>
 </html>
